# spotifyArchivist

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  SECURITY.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: decisions.md  plan.md
docs/adr/: 0001-bitemporal-membership-store.md  0002-two-sync-loss-confirmation.md
scripts/: check-migrations.sh  coverage.sh  gen-icon.mjs
src/: App.tsx  main.tsx  routeTree.ts
src-tauri/: .cargo-llvm-cov.toml  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_onboarded_setting.sql
src-tauri/src/: export.rs  lib.rs  main.rs  notify.rs  scheduler.rs  ui.rs
src-tauri/src/auth/: error.rs  loopback.rs  mod.rs  pkce.rs  tokens.rs
src-tauri/src/commands/: app_state.rs  handlers.rs  mod.rs
src-tauri/src/spotify/: client.rs  dto.rs  error.rs  mod.rs
src-tauri/src/store/: error.rs  mod.rs  models.rs  repo.rs  tests.rs
src-tauri/src/sync/: diff.rs  engine.rs  error.rs  integration_tests.rs  mod.rs
src/components/: ConfirmDialog.test.tsx  ConfirmDialog.tsx  DotField.tsx  FilterPill.test.tsx  FilterPill.tsx  LoginScreen.test.tsx  LoginScreen.tsx  OnboardingScreen.test.tsx  OnboardingScreen.tsx  PalettePopover.test.tsx  PalettePopover.tsx  SourceShell.tsx  ThemeSync.tsx  ThemeToggle.tsx  TrackArt.tsx  TrackList.test.tsx  TrackList.tsx
src/lib/: branding.test.ts  branding.ts  cn.test.ts  formatLastSync.test.ts  formatLastSync.ts  trackArt.test.ts  trackArt.ts
src/lib/ipc/: client.test.ts  client.ts  types.test.ts  types.ts
src/routes/: __root.tsx  index.tsx  login.tsx  onboarding.tsx  settings.tsx  source.$id.tsx
src/store/: useUi.ts
src/styles/: globals.css
src/test/: setup.ts
